--- a/tree_hash/Cargo.toml
+++ b/tree_hash/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tree_hash"
-version = "1.0.0-beta.0"
+version = "0.5.0"
 edition = "2021"
 description = "Efficient Merkle-hashing as used in Ethereum consensus"
 license = "Apache-2.0"
@@ -17,7 +17,7 @@ smallvec = "1.6.1"
 
 [dev-dependencies]
 rand = "0.8.5"
-tree_hash_derive = { path = "../tree_hash_derive", version = "1.0.0-beta.0" }
+tree_hash_derive = { path = "../tree_hash_derive", version = "0.5.0" }
 ethereum_ssz = "1.0.0-beta.2"
 ethereum_ssz_derive = "1.0.0-beta.2"
 
