--- a/tree_hash_derive/Cargo.toml
+++ b/tree_hash_derive/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tree_hash_derive"
-version = "1.0.0-beta.0"
+version = "0.5.0"
 edition = "2021"
 description = "Procedural derive macros to accompany the tree_hash crate"
 license = "Apache-2.0"
