--- a/tree_hash/Cargo.toml
+++ b/tree_hash/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["cryptography::cryptocurrencies"]
 
 [dependencies]
 ethereum-types = "0.14.1"
-ethereum_hashing = "1.0.0-beta.2"
+lazy_static = "1.4.0"
 sha2 = "0.10.6"
 smallvec = "1.6.1"
 
