--- a/tree_hash/Cargo.toml
+++ b/tree_hash/Cargo.toml
@@ -11,7 +11,7 @@ keywords = ["ethereum"]
 categories = ["cryptography::cryptocurrencies"]
 
 [dependencies]
-ethereum-types = "0.14.1"
+alloy-primitives = "0.7.0"
 ethereum_hashing = "0.6.0"
 smallvec = "1.6.1"
 
@@ -22,4 +22,4 @@ ethereum_ssz = "0.5"
 ethereum_ssz_derive = "0.5"
 
 [features]
-arbitrary = ["ethereum-types/arbitrary"]
+arbitrary = ["alloy-primitives/arbitrary"]
