--- a/tree_hash_derive/Cargo.toml
+++ b/tree_hash_derive/Cargo.toml
@@ -17,3 +17,5 @@ proc-macro = true
 syn = "1.0.42"
 quote = "1.0.7"
 darling = "0.13.0"
+proc-macro2 = "1.0.23"
+ssz_types = { git = "https://github.com/macladson/ssz_types", branch = "stable-container" }
