--- a/tree_hash/Cargo.toml
+++ b/tree_hash/Cargo.toml
@@ -17,7 +17,7 @@ smallvec = "1.6.1"
 
 [dev-dependencies]
 rand = "0.8.5"
-tree_hash_derive = { git = "https://github.com/macladson/tree_hash", branch = "stable-container" }
+tree_hash_derive = { path = "../tree_hash_derive", version = "0.6.0" }
 ethereum_ssz = { git = "https://github.com/macladson/ethereum_ssz", branch = "stable-container" }
 ethereum_ssz_derive = { git = "https://github.com/macladson/ethereum_ssz", branch = "stable-container" }
 ssz_types = { git = "https://github.com/macladson/ssz_types", branch = "stable-container" }
