--- a/tree_hash/Cargo.toml
+++ b/tree_hash/Cargo.toml
@@ -11,15 +11,15 @@ keywords = ["ethereum"]
 categories = ["cryptography::cryptocurrencies"]
 
 [dependencies]
-ethereum-types = "0.14.1"
-ethereum_hashing = "0.6.0"
+alloy-primitives = "0.7.0"
+ethereum_hashing = "0.7.0"
 smallvec = "1.6.1"
 
 [dev-dependencies]
 rand = "0.8.5"
 tree_hash_derive = { path = "../tree_hash_derive", version = "0.6.0" }
-ethereum_ssz = "0.5"
-ethereum_ssz_derive = "0.5"
+ethereum_ssz = "0.6"
+ethereum_ssz_derive = "0.6"
 
 [features]
-arbitrary = ["ethereum-types/arbitrary"]
+arbitrary = ["alloy-primitives/arbitrary"]
