--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,12 @@ members = [
     "tree_hash_derive",
 ]
 resolver = "2"
+
+[workspace.package]
+version = "0.11.0"
+edition = "2021"
+license = "Apache-2.0"
+readme = "../README.md"
+repository = "https://github.com/sigp/tree_hash"
+keywords = ["ethereum"]
+categories = ["cryptography::cryptocurrencies"]
