--- a/tree_hash/Cargo.toml
+++ b/tree_hash/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "tree_hash"
-version = "0.11.0"
-edition = "2021"
 description = "Efficient Merkle-hashing as used in Ethereum consensus"
-license = "Apache-2.0"
-readme = "../README.md"
-repository = "https://github.com/sigp/tree_hash"
 documentation = "https://docs.rs/tree_hash"
-keywords = ["ethereum"]
-categories = ["cryptography::cryptocurrencies"]
+version.workspace = true
+edition.workspace = true
+license.workspace = true
+readme.workspace = true
+repository.workspace = true
+keywords.workspace = true
+categories.workspace = true
 
 [dependencies]
 alloy-primitives = "1.0.0"
