Readme path relative to root Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ resolver = "2"
 version = "0.11.0"
 edition = "2021"
 license = "Apache-2.0"
-readme = "../README.md"
+readme = "README.md"
 repository = "https://github.com/sigp/tree_hash"
 keywords = ["ethereum"]
 categories = ["cryptography::cryptocurrencies"]
